# r-type

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  rfc.txt
assets/lua/: enemies_movement_system.lua  movement_shoot_system.lua  sinus_movement_system.lua  test_system.lua
assets/tests/: test.lua
lib/lua/: CMakeLists.txt
src/: CMakeLists.txt  CMakeSources.cmake  a_lua_script.lua  main.cpp
src/client/: App.cpp  App.hpp  CMakeLists.txt  CMakeSources.cmake  Client.cpp  Client.hpp  ResourceManager.hpp  client.cpp  client.hpp  main.cpp
src/client/events/: ConnectState.hpp  EventManager.cpp  EventManager.hpp  SfmlEvent.hpp  SfmlEvents.hpp
src/client/network/: Client.cpp  Client.hpp
src/client/scenes/: GameScene.cpp  GameScene.hpp  MenuScene.cpp  MenuScene.hpp  Scene.cpp  Scene.hpp  SplashScene.cpp  SplashScene.hpp
src/common/: Logger.cpp  Logger.hpp  vec.hpp
src/engine/: Components.hpp  Entity.cpp  Entity.hpp  GameContainer.hpp
src/engine/systems/: MovementSystem.hpp  Systems.hpp
src/network/: protocol.hpp
src/server/: CMakeLists.txt  CMakeSources.cmake  ProtocolServer.cpp  ProtocolServer.hpp  Server.cpp  Server.hpp  address.cpp  address.hpp  main.cpp  protocolServer.cpp  protocolServer.hpp  server.cpp  server.hpp
src/server/engine/: ComponentId.cpp  ComponentId.hpp  ComponentTypeId.hpp  Components.hpp  Entity.cpp  Entity.hpp  GameContainer.cpp  GameContainer.hpp  World.cpp  World.hpp
src/server/engine/systems/: CollisionSystem.cpp  CollisionSystem.hpp  EnemiesMovementSystem.cpp  EnemiesMovementSystem.hpp  EnemiesShootSystem.cpp  EnemiesShootSystem.hpp  InGameBoardSystem.cpp  InGameBoardSystem.hpp  InputSystem.cpp  InputSystem.hpp  LuaSystem.cpp  LuaSystem.hpp  MovementShootSystem.cpp  MovementShootSystem.hpp  MovementSystem.cpp  MovementSystem.hpp  PickUpSystem.cpp  PickUpSystem.hpp  RemoveSystem.cpp  RemoveSystem.hpp  SpawnMonster.cpp  SpawnMonster.hpp  SpawnMonsterSystem.cpp  SpawnMonsterSystem.hpp  System.hpp
